# path-tracer

./: .gitignore  CMakeLists.txt  README.md
admin/: proposal.tex
admin/proposal/: proposal.tex
evaluation/: evaluation.ipynb  log_0_128_off_16_0  log_0_128_off_16_1  log_0_128_off_16_2  log_0_128_off_2_0  log_0_128_off_2_1  log_0_128_off_2_2  log_0_128_off_4_0  log_0_128_off_4_1  log_0_128_off_4_2  log_0_128_off_8_0  log_0_128_off_8_1  log_0_128_off_8_2  log_0_4096_off_16_0  log_1_1024_off_16_0  log_1_1024_off_16_1  log_1_1024_off_16_2  log_1_1024_off_4_0  log_1_1024_off_4_1  log_1_1024_off_4_2  log_1_1024_on_16_0  log_1_1024_on_16_1  log_1_1024_on_16_2  log_1_1024_on_4_0  log_1_1024_on_4_1  log_1_1024_on_4_2  log_1_128_off_16_0  log_1_128_off_16_1  log_1_128_off_16_2  log_1_128_off_4_0  log_1_128_off_4_1  log_1_128_off_4_2  log_1_128_on_16_0  log_1_128_on_16_1  log_1_128_on_16_2  log_1_128_on_4_0  log_1_128_on_4_1  log_1_128_on_4_2  log_1_4_off_16_0  log_1_4_off_16_1  (+38 more)
inc/: brdf.cuh  bvh.cuh  camera.cuh  check_cuda_errors.h  constants.h  denoise.cuh  exception.h  phong.cuh  ray.cuh  render.cuh  scene.cuh  shapes.cuh  util.cuh  world.cuh
src/: brdf.cu  bvh.cu  camera.cu  check_cuda_errors.cu  denoise.cu  main.cu  phong.cu  ray.cu  render.cu  scene.cu  shapes.cu  util.cu  world.cu
test/: brdf.cu  bvh.cu  camera.cu  canvas.cu  cubemap.cu  float.cu  free_world.cu  matrix.cu  mesh.cu  phong.cu  quaternion.cu  ray.cu  scene.cu  shapes.cu  vector.cu  world.cu
